--- a/pirates-kubernetes/overlays/dev/kustomization.yaml
+++ b/pirates-kubernetes/overlays/dev/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: development
 resources:
-  - sea-deploy.yaml
-  - sea-svc.yaml
+  - ../../base
+namePrefix: dev-
