--- a/sea-kubernetes/base/sea-svc.yaml
+++ b/sea-kubernetes/base/sea-svc.yaml
@@ -6,5 +6,7 @@ spec:
   selector:
     app: sea
   ports:
-  - port: 5000
-    targetPort: http
+  - name: http
+    protocol: TCP
+    port: 5000
+    targetPort: 5000
