--- a/pirates-kubernetes/base/pirates-deploy.yaml
+++ b/pirates-kubernetes/base/pirates-deploy.yaml
@@ -17,10 +17,8 @@ spec:
       - name: pirates
         image: pirates
         env:
-          - name: HOST_PIRATE
-            value: "localhost"
-          - name: PORT_PIRATE
-            value: "6000"
+          - name: LISTEN_ADDRESS
+            value: ":6000"
         resources:
           limits:
             memory: "256Mi"
