--- a/pirates-kubernetes/base/pirates-svc.yaml
+++ b/pirates-kubernetes/base/pirates-svc.yaml
@@ -1,11 +1,11 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: pirates
-spec:
-  type: ClusterIP
-  selector:
-    app: pirates
-  ports:
-  - port: 6000
-    targetPort: http
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: pirates
+# spec:
+#   type: NodePort
+#   selector:
+#     app: pirates
+#   ports:
+#   - port: 6000
+#     targetPort: http
