--- a/pirates-kubernetes/base/pirates-deploy.yaml
+++ b/pirates-kubernetes/base/pirates-deploy.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: pirates
-        image: pirates
+        image: mich4n/pirates
         env:
           - name: LISTEN_ADDRESS
             value: ":6000"
